# CCDTM

./: README.md
fcl/: CMakeLists.txt  package.xml
fcl/include/fcl/: collision_data.h  collision_object.h  continuous_collision.h  intersect.h
fcl/include/fcl/BV/: BV.h  SPHERE.h  kIOS.h
fcl/include/fcl/BVH/: BVH_model.h  BVH_utility.h  BV_fitter.h  BV_splitter.h
fcl/include/fcl/ccd/: conservative_advancement.h  motion.h  motion_AM.h  motion_base.h
fcl/include/fcl/tm/: ModelParameters.h  Taylor_Function.h  cIAMatrix33.h  cIAVector3.h  cInterval.h  cMatrix33.h  cTM2Matrix33.h  cTM2Matrix44.h  cTM2Vector3.h  cTM2Vector4.h  cTM3Matrix33.h  cTM3Vector3.h  cTaylorModel2.h  cTaylorModel3.h  cVector3.h  genetic_algorithm.h  interval.hpp
fcl/include/fcl/traversal/: traversal_node_bvh_shape.h  traversal_node_bvhs.h
fcl/src/: continuous_collision.cpp
fcl/src/BV/: SPHERE.cpp
fcl/src/BVH/: BVH_model.cpp  BVH_utility.cpp  BV_fitter.cpp  BV_splitter.cpp
fcl/src/ccd/: motion.cpp
fcl/src/tm/: ModelParameters.cpp  Taylor_Function.cpp  cIAMatrix33.cpp  cIAVector3.cpp  cInterval.cpp  cMatrix33.cpp  cTM2Matrix33.cpp  cTM2Matrix44.cpp  cTM2Vector3.cpp  cTM2Vector4.cpp  cTM3Matrix33.cpp  cTM3Vector3.cpp  cTaylorModel2.cpp  cTaylorModel3.cpp  cVector3.cpp  genetic_algorithm.cpp  interval.cpp  motion.cpp
fcl/test/: CMakeLists.txt  general_test.cpp  test_fcl_simple.cpp
yumi_demo/: CMakeLists.txt  package.xml
yumi_demo/launch/: yumi_loop.launch
yumi_demo/scripts/: CollisionCheckList.txt  listen_goal.py  plot.py  plot_mpl.py  plot_mpl_data_all.py  plot_mpl_log_diff.py  raw_data_r.txt  yumi_joint_publisher.py
yumi_demo/src/: collision_detection_yumi.cpp  increment_test.cpp  thread_test.cpp  tool_test.cpp  uncertain_yumi_nolaunch.cpp  visual_demo.cpp  visual_demo_collision.cpp  visual_demo_increment.cpp  visual_demo_st.cpp  visual_demo_thread.cpp  visual_st_pencil.cpp  yumi_fcl_pencil.cpp  yumi_goal_listener.cpp  yumi_goal_listener_no_tf.cpp  yumi_goal_listener_segment.cpp  yumi_tm_opt_fcl_needle.cpp  yumi_tm_opt_fcl_pencil.cpp
yumi_description/meshes/env/: cross.stl  desk.stl  needle.stl  paper.stl  word_4.stl  word_r.stl
yumi_description/meshes/gripper/: ball.stl
yumi_description/meshes/gripper/effector/: blade.stl  needle.stl  pencil.stl  scalpel.stl  tweezers.stl
yumi_description/urdf/: yumi.urdf.xacro  yumi.xacro  yumi_servo_gripper.xacro  yumi_servo_gripper_copy.xacro
yumi_moveit_config/config/: kinematics.yaml
yumi_moveit_config/launch/: demo.launch  lerp_planning_pipeline.launch.xml  move_group.launch  moveit.rviz  moveit_rviz.launch  warehouse.launch
